# juris-calculus

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX_PLAYBOOK.md  FACT_VERIFICATION_STATES.md  FORMAL_RUNTIME_CONFORMANCE.md  LICENSE  LLM_INGESTION_CONTRACT.md  README.md  README_CN.md  RELEASE_v1.0.1.md  RELEASE_v1.0.2.md  RELEASE_v1.2.0.md  RELEASE_v2.0.0.md  SEMANTIC_BOUNDARY_CHECKLIST.md  SORRY_LEDGER.md  concept-roadmap.md  cross_jurisdiction_audit_prompt.md  mcp_manifest.json  mcp_server.py  memory.md  metainfer_integration_plan_20260612.md  pyproject.toml  requirements.txt
adapter/: __init__.py  prc_adapter.py
addons/: __init__.py  workbuddy_mcp.py
compiler_core/: __init__.py  adapter_base.py  adjudication_draft.py  analysis.py  application.py  arbitration_reasoning.py  argumentation.py  audit.py  audit_bundle.py  automated_pipeline.py  banach_verifier.py  batch_processor.py  bayesian_calibration.py  breakthrough_candidates.py  breakthrough_verification.py  burden_of_proof.py  canonical_serialization.py  certificate_checker.py  cli.py  completion_status.py  compliance_monitoring.py  composition_safety.py  config_paths.py  conflict_of_laws.py  constraint_validator.py  contracts.py  criminal_complexity.py  criminal_sentencing.py  cross_jurisdiction_compare.py  cross_jurisdiction_router.py  dacl_graph.py  ddl_preclassifier.py  de_jure_auditor.py  defeasible_priority.py  domain_config.py  dp_policy_loader.py  entity_anonymizer.py  evaluator.py  evidence_chain_validator.py  evidence_checklist.py  (+67 more)
config/: constants_registry.yaml
(+646 files in other folders)
